--- a/update_all.cfg
+++ b/update_all.cfg
@@ -29,6 +29,7 @@ sites_paths=(
 # VEIT_process=False
 # WRUK_process=False
 # LOBE_process=False
+# LPAR_process=False
 
 BEFR_segment_args="-c water"
 GAIT_segment_args="-c water -m grey"
@@ -50,7 +51,6 @@ BSBE_process=False
 coni_process=False
 DEGE_process=False
 GONA_process=False
-LPAR_process=False
 WWUK_process=False
 
 ATGE_segment_args="-c land_gfz"
