add html dash board generation

--- a/update_all.cfg
+++ b/update_all.cfg
@@ -1,35 +1,38 @@
 # -----------------------------------------------------------
 # Note: do not use '~' but $HOME instead
 # -----------------------------------------------------------
-data_folder="./csv_data/"
-outp_folder="./html/monitor/"
-# pre_process="./scripts/pre_process.sh"
+csv_dir="./csv_data/"
+plot_out="./html/monitor/"
+html_out="./html/dash_board/"
+
+html_out="./html/test/dash_board"
+plot_out="./html/test/monitor"
+
+pre_process="./scripts/pre_process.sh"
 # post_process="./scripts/post_process.sh"
 
 # -----------------------------------------------------------
 # Note: trailing slash required!!
 # -----------------------------------------------------------
-
-sites_paths=(
-            "/home/hypernets/BEFR_v3/"
-            "/home/hypernets/MAFR/"
-            )
-
+# sites_paths=(
+#             "/home/hypernets/BEFR_v3/"
+#             "/home/hypernets/MAFR/"
+#             )
 # -----------------------------------------------------------
-#
+sites_paths=("/home/hypernets/sample_befr_test/")
 # -----------------------------------------------------------
 # Active sites
 # -----------------------------------------------------------
-# BEFR_process=False
-# GAIT_process=False
-# JAES_process=False
-# LVES_process=False
-# MAFR_process=False
-# M1BE_process=False
-# VEIT_process=False
-# WRUK_process=False
-# LOBE_process=False
+BEFR_process=False
+GAIT_process=False
+JAES_process=False
+LVES_process=False
+M1BE_process=False
+VEIT_process=False
+WRUK_process=False
+LOBE_process=False
 # LPAR_process=False
+# MAFR_process=False
 
 BEFR_segment_args="-c water"
 GAIT_segment_args="-c water -m grey"
@@ -59,3 +62,24 @@ DEGE_segment_args="-c land_gfz"
 GONA_segment_args="-c land_gona"
 WWUK_segment_args="-c land_npl"
 coni_segment_args="-c land_coni"
+
+# -----------------------------------------------------------
+# Sequence Timer All cfg
+# -----------------------------------------------------------
+debug=0  # only 1 step
+verbose=0 # output everything on stdout (no output file)
+write_stdout=0 # 0: write file (default); 1: write to stdout;
+display_integration_time=0
+# ---------------------------------------------------------------------
+extract_meteo=1
+extract_serial_bug=1
+extract_too_dark=1
+extract_rain=1
+extract_yocto_rtc=0
+# ---------------------------------------------------------------------
+year_to_process=2023
+after=0
+before=0
+# after=$(date -d "2023-06-22 01:00" +"%s")
+# before=$(date -d "2023-06-24 00:00" +"%s")
+# ---------------------------------------------------------------------
