config file to default

--- a/update_all.cfg
+++ b/update_all.cfg
@@ -1,5 +1,5 @@
 # -----------------------------------------------------------
-# Note: do not use '~' but $HOME instead
+# Note: do not use '~' but $HOME instead here
 # -----------------------------------------------------------
 csv_dir="./csv_data/"
 plot_out="./html/monitor/"
@@ -14,54 +14,20 @@ pre_process="./scripts/pre_process.sh"
 # -----------------------------------------------------------
 # Note: trailing slash required!!
 # -----------------------------------------------------------
-# sites_paths=(
-#             "/home/hypernets/BEFR_v3/"
-#             "/home/hypernets/MAFR/"
-#             )
-# -----------------------------------------------------------
-sites_paths=("/home/hypernets/sample_befr_test/")
+# Process the "hypernets_tools generated" folder (w/ LOGS/DATA)
+sites_paths=("~/SITE/")
+
 # -----------------------------------------------------------
 # Active sites
 # -----------------------------------------------------------
-BEFR_process=False
-GAIT_process=False
-JAES_process=False
-LVES_process=False
-M1BE_process=False
-VEIT_process=False
-WRUK_process=False
-LOBE_process=False
-# LPAR_process=False
-# MAFR_process=False
-
-BEFR_segment_args="-c water"
-GAIT_segment_args="-c water -m grey"
-JAES_segment_args="-c land_tartu"
-LVES_segment_args="-c water"
-MAFR_segment_args="-c water -m grey"
-M1BE_segment_args="-c water"
-VEIT_segment_args="-c water"
-WRUK_segment_args="-c water_wruk"
-LOBE_segment_args="-c land_lobe"
+samp_process=False
+samp_process="-c water"
 
 # -----------------------------------------------------------
 # Do not process non active sites  
 # -----------------------------------------------------------
-fini_process=False
+disa_process=False
 # -----------------------------------------------------------
-ATGE_process=False
-BSBE_process=False
-coni_process=False
-DEGE_process=False
-GONA_process=False
-WWUK_process=False
-
-ATGE_segment_args="-c land_gfz"
-BSBE_segment_args="-c water_bsbe"
-DEGE_segment_args="-c land_gfz"
-GONA_segment_args="-c land_gona"
-WWUK_segment_args="-c land_npl"
-coni_segment_args="-c land_coni"
 
 # -----------------------------------------------------------
 # Sequence Timer All cfg
@@ -80,6 +46,7 @@ extract_yocto_rtc=0
 year_to_process=2023
 after=0
 before=0
+# ---------------------------------------------------------------------
 # after=$(date -d "2023-06-22 01:00" +"%s")
 # before=$(date -d "2023-06-24 00:00" +"%s")
 # ---------------------------------------------------------------------
