change home in cfg

--- a/update_all.cfg
+++ b/update_all.cfg
@@ -15,7 +15,7 @@ pre_process="./scripts/pre_process.sh"
 # Note: trailing slash required!!
 # -----------------------------------------------------------
 # Process the "hypernets_tools generated" folder (w/ LOGS/DATA)
-sites_paths=("~/SITE/")
+sites_paths=("$HOME/SITE/")
 
 # -----------------------------------------------------------
 # Active sites
