--- a/update_all.cfg
+++ b/update_all.cfg
@@ -20,8 +20,8 @@ sites_paths=("$HOME/SITE/")
 # -----------------------------------------------------------
 # Active sites
 # -----------------------------------------------------------
-samp_process=False
-samp_process="-c water"
+SITE_process=False
+SITE_segment_args="-c water"
 
 # -----------------------------------------------------------
 # Do not process non active sites  
