--- a/update_all.cfg
+++ b/update_all.cfg
@@ -2,20 +2,17 @@
 # Note: do not use '~' but $HOME instead here
 # -----------------------------------------------------------
 csv_dir="./csv_data/"
-plot_out="./html/monitor/"
-html_out="./html/dash_board/"
 
-html_out="./html/test/dash_board"
-plot_out="./html/test/monitor"
+html_out="./html/dash_board"
+plot_out="./html/monitor"
 
 pre_process="./scripts/pre_process.sh"
 # post_process="./scripts/post_process.sh"
 
 # -----------------------------------------------------------
-# Note: trailing slash required!!
-# -----------------------------------------------------------
-# Process the "hypernets_tools generated" folder (w/ LOGS/DATA)
-sites_paths=("$HOME/SITE/")
+# List of the "hypernets_tools generated folder" to process 
+# i.e. w/ LOGS / DATA
+sites_paths=("$HOME/SITE")
 
 # -----------------------------------------------------------
 # Active sites
@@ -26,8 +23,8 @@ SITE_segment_args="-c water"
 # -----------------------------------------------------------
 # Do not process non active sites  
 # -----------------------------------------------------------
-disa_process=False
-# -----------------------------------------------------------
+DISA_process=False
+
 
 # -----------------------------------------------------------
 # Sequence Timer All cfg
