--- a/update_all.cfg
+++ b/update_all.cfg
@@ -6,7 +6,7 @@ csv_dir="./csv_data/"
 html_out="./html/dash_board"
 plot_out="./html/monitor"
 
-pre_process="./scripts/pre_process.sh"
+# pre_process="./scripts/pre_process.sh"
 # post_process="./scripts/post_process.sh"
 
 # -----------------------------------------------------------
@@ -33,17 +33,17 @@ debug=0  # only 1 step
 verbose=0 # output everything on stdout (no output file)
 write_stdout=0 # 0: write file (default); 1: write to stdout;
 display_integration_time=0
-# ---------------------------------------------------------------------
+# -----------------------------------------------------------
 extract_meteo=1
 extract_serial_bug=1
 extract_too_dark=1
 extract_rain=1
 extract_yocto_rtc=0
-# ---------------------------------------------------------------------
+# -----------------------------------------------------------
 year_to_process=2023
 after=0
 before=0
-# ---------------------------------------------------------------------
+# -----------------------------------------------------------
 # after=$(date -d "2023-06-22 01:00" +"%s")
 # before=$(date -d "2023-06-24 00:00" +"%s")
-# ---------------------------------------------------------------------
+# -----------------------------------------------------------
