update several sites

--- a/update_all.cfg
+++ b/update_all.cfg
@@ -6,13 +6,14 @@ csv_dir="./csv_data/"
 html_out="./html/dash_board"
 plot_out="./html/monitor"
 
-# pre_process="./scripts/pre_process.sh"
+pre_process="./scripts/pre_process.sh"
 # post_process="./scripts/post_process.sh"
 
 # -----------------------------------------------------------
 # List of the "hypernets_tools generated folder" to process 
 # i.e. w/ LOGS / DATA
-sites_paths=("$HOME/SITE")
+sites_paths=("$HOME/SITE"
+             "$HOME/MEFR")
 
 # -----------------------------------------------------------
 # Active sites
