bug fix trailing slash

--- a/update_all.cfg
+++ b/update_all.cfg
@@ -18,7 +18,7 @@ sites_paths=("$HOME/SITE"
 # -----------------------------------------------------------
 # Active sites
 # -----------------------------------------------------------
-SITE_process=False
+SITE_process=True
 SITE_segment_args="-c water"
 
 # -----------------------------------------------------------
@@ -30,8 +30,8 @@ DISA_process=False
 # -----------------------------------------------------------
 # Sequence Timer All cfg
 # -----------------------------------------------------------
-debug=0  # only 1 step
-verbose=0 # output everything on stdout (no output file)
+debug=1  # only 1 step
+verbose=1 # output everything on stdout (no output file)
 write_stdout=0 # 0: write file (default); 1: write to stdout;
 display_integration_time=0
 # -----------------------------------------------------------
