--- a/update_all.cfg
+++ b/update_all.cfg
@@ -2,6 +2,7 @@
 # Note: do not use '~' but $HOME instead here
 # -----------------------------------------------------------
 csv_dir="./csv_data/"
+nc_dir="./nc_data/"
 
 html_out="./html/dash_board"
 plot_out="./html/monitor"
