--- a/update_all.cfg
+++ b/update_all.cfg
@@ -3,18 +3,15 @@
 # -----------------------------------------------------------
 csv_dir="./csv_data/"
 nc_dir="./nc_data/"
-
 html_out="./html/dash_board"
 plot_out="./html/monitor"
-
 pre_process="./scripts/pre_process.sh"
 # post_process="./scripts/post_process.sh"
 
 # -----------------------------------------------------------
 # List of the "hypernets_tools generated folder" to process 
 # i.e. w/ LOGS / DATA
-sites_paths=("$HOME/SITE"
-             "$HOME/MEFR")
+sites_paths=("./TEFR")
 
 # -----------------------------------------------------------
 # Active sites
@@ -26,3 +23,23 @@ SITE_segment_args="-c water"
 # Do not process non active sites  
 # -----------------------------------------------------------
 DISA_process=False
+
+# -----------------------------------------------------------
+# Let's define some default values here
+# -----------------------------------------------------------
+debug=0          # only 1 step
+verbose=1        # output everything on stdout (no output file)
+write_stdout=0   # 0: write file (default); 1: write to stdout;
+display_integration_time=0
+# -----------------------------------------------------------
+extract_meteo=1
+extract_serial_bug=1
+extract_too_dark=1
+extract_rain=1
+extract_yocto_rtc=0
+# -----------------------------------------------------------
+year_to_process=2024
+after=0
+before=0
+# after=$(date -d "2023-06-22 01:00" +"%s")
+# before=$(date -d "2023-06-24 00:00" +"%s")
